<resources>
	<string name="app_name">NFC DL Signer</string>
	<string name="title_activity_main">NFC DL Signer 0.6</string>
	<string name="site_url">www.d-logic.com/nfc-rfid-reader-sdk/</string>

    <string name="default_pin">00000000</string>

	<string-array name="digest_algorithms">
		<item>SHA1</item>
		<item>SHA-224</item>
		<item>SHA-256</item>
		<item>SHA-384</item>
		<item>SHA-512</item>
	</string-array>

	<string-array name="key_indexes">
		<item>0</item>
		<item>1</item>
		<item>2</item>
	</string-array>

	<string-array name="cipher_algorithms">
		<item>RSA</item>
		<item>ECDSA</item>
	</string-array>

	<integer-array name="authentication_mode_values">
		<item>96</item>
		<item>97</item>
	</integer-array>

	<string name="txt_user_pin">User PIN:</string>
    <string name="txt_device_type">File to sign:</string>
    <string name="txt_digest_algorithm">Digest algorithm:</string>
    <string name="txt_key_index">Key index:</string>
    <string name="txt_cipher_algorithm">Cipher algorithm:</string>
    <string name="txt_key">-</string>
    <string name="txt_card_id_sak">File:</string>
    <string name="txt_card_uid">Digest:</string>
    <string name="txt_block_data">Signature:</string>

	<string name="txt_btn_choose_file">CHOOSE\nA FILE</string>
	<string name="txt_btn_get_signature">GET\nSIGNATURE</string>
	<string name="txt_btn_save_signature">SAVE\nSIGNATURE</string>

	<string name="enterFileName">Enter file name:</string>
	<string name="saveButtonText">Save</string>
	<string name="cancelButtonText">Cancel</string>
	<string name="cannotSaveFileMessage">Cannot save file</string>
	<string name="fileNameFirstMessage">Please enter the file name first</string>
	<string name="okButtonText">OK</string>
	<string name="loadButtonText">Load</string>
	<string name="accessDenied">Access denied</string>
	<string name="missingFile">No such file</string>
	<string name="newFolderButtonText">New folder</string>
	<string name="newFolderDialogMessage">Create new folder</string>
	<string name="createButtonText">Create</string>
	<string name="folderCreationOk">Folder created sucessfully</string>
	<string name="folderCreationError">Error while creating folder</string>
	<string name="information">Information</string>
</resources>
