<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_weight="15">

        <TextView
            android:id="@+id/siteLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/header_logo"
            android:gravity="bottom|center"
            android:paddingBottom="12dp"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <Button
                    android:id="@+id/btnChooseFile"
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_pattern"
                    android:gravity="center"
                    android:scaleType="centerInside"
                    android:text="@string/txt_btn_choose_file"
                    android:textColor="@drawable/button_text_color"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <Button
                    android:id="@+id/btnGetSignature"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_pattern"
                    android:gravity="center|top"
                    android:paddingTop="17dp"
                    android:scaleType="centerInside"
                    android:text="@string/txt_btn_get_signature"
                    android:textColor="@drawable/button_text_color"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <Button
                    android:id="@+id/btnSaveSignature"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_pattern"
                    android:gravity="center|top"
                    android:paddingTop="17dp"
                    android:scaleType="centerInside"
                    android:text="@string/txt_btn_save_signature"
                    android:textColor="@drawable/button_text_color"
                    android:textSize="10sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="84dp"
        android:layout_weight="25"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp"
        android:tag="configure block">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelCipherAlgorithm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="none"
                    android:text="@string/txt_cipher_algorithm"
                    android:textColor="#8fc546"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spnCipherAlgorithm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/text_view_sm"
                    android:gravity="center"
                    android:inputType="none"
                    tools:layout_height="38dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelDigestAlgorithm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="none"
                    android:text="@string/txt_digest_algorithm"
                    android:textColor="#8fc546"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spnDigestAlgorithm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_view_sm"
                    android:gravity="center"
                    android:inputType="none"
                    tools:layout_height="38dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelspnKeyIndexes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="none"
                    android:text="@string/txt_key_index"
                    android:textColor="#8fc546"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spnKeyIndexes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/text_view_sm"
                    android:gravity="center"
                    android:inputType="none"
                    tools:layout_height="38dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelUserPin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="start"
                android:inputType="none"
                android:text="@string/txt_user_pin"
                android:textColor="#8fc546"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ebUserPin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/text_view_sm"
                android:enabled="true"
                android:focusable="true"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLength="8"
                android:singleLine="true"
                android:text="@string/default_pin"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp"
                tools:layout_height="38dp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="60"
        android:background="@drawable/grey_background"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:paddingTop="5dp">

            <EditText
                android:id="@+id/ebFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/text_view_lg"
                android:enabled="false"
                android:paddingStart="120dp"
                android:paddingEnd="10dp"
                android:singleLine="true"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/labelTagId"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="25dp"
                android:gravity="center_vertical"
                android:inputType="none"
                android:text="@string/txt_card_id_sak"
                android:textColor="#8fc546"
                android:textSize="8sp"
                android:textStyle="bold" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1">

            <EditText
                android:id="@+id/ebDigest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/text_view_lg"
                android:enabled="true"
                android:inputType="none"
                android:paddingStart="120dp"
                android:paddingEnd="10dp"
                android:singleLine="true"
                android:textColor="@android:color/darker_gray"
                android:textIsSelectable="true"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/labelCardUid"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="25dp"
                android:gravity="start|center_vertical"
                android:text="@string/txt_card_uid"
                android:textColor="#8fc546"
                android:textSize="8sp"
                android:textStyle="bold" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1">

            <EditText
                android:id="@+id/ebSignature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/text_view_lg"
                android:enabled="false"
                android:paddingStart="120dp"
                android:paddingEnd="10dp"
                android:singleLine="true"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/labelBlockData"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="25dp"
                android:gravity="start|center_vertical"
                android:text="@string/txt_block_data"
                android:textColor="#8fc546"
                android:textSize="8sp"
                android:textStyle="bold" />
        </FrameLayout>
    </LinearLayout>

    <!--FrameLayout
        android:id="@+id/waitingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </FrameLayout>-->
</LinearLayout>
